--- a/2.ebaluaketa/WineShop/Wineshop/Views/Home/Index.cshtml
+++ b/2.ebaluaketa/WineShop/Wineshop/Views/Home/Index.cshtml
@@ -144,6 +144,10 @@
                                                         <p class="btn-details">
                                                             <i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com" class="d-sm-none d-md-block">Detaile gehiago</a>
                                                         </p>
+                                                        <p class="btn-add">
+                                                            <i class="fa fa-shopping-cart"></i>
+                                                            <a asp-controller="Saskia" asp-action="SaskiaGehitu" asp-route-id="@item.Id">Karritora gehitu</a>
+                                                        </p>
                                                     </div>
                                                     <div class="clearfix">
                                                     </div>
